# stock_recomendation_using_mcp

./: .env  README.md  main.py  pyproject.toml  requirements.txt
