[project]
name = "stock-recommendation-using-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "langchain>=0.3.27",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.3",
    "langgraph-supervisor>=0.0.29",
    "python-dotenv>=1.1.1",
]
